# IdeaBounty

./: .gitignore  AGENTS.md  README.md  WRITEUP.md  compose.yaml  商业点子收集器·面试题.md  技术方案.md  部署指南.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_create_users_and_sessions.py  20260711_0002_enforce_single_user_session.py  20260711_0003_create_ideas.py  20260711_0004_add_idea_evaluation.py  20260711_0005_add_idea_embedding.py  20260711_0006_add_idea_duplicate_result.py  20260711_0007_add_idea_bounty.py  20260711_0008_add_admin_processing.py
backend/scripts/: __init__.py  probe_ai_provider.py  probe_duplicate_provider.py  probe_embedding_provider.py  promote_admin.py
backend/src/idea_bounty/: __init__.py  config.py  main.py
backend/src/idea_bounty/ai/: __init__.py  chat.py  client.py  config.py  duplicate_client.py  duplicate_prompts.py  prompts.py
backend/src/idea_bounty/api/: router.py
backend/src/idea_bounty/db/: __init__.py  base.py  session.py
backend/src/idea_bounty/embedding/: __init__.py  client.py  (+3 more)
backend/tests/: ai_fakes.py  conftest.py  duplicate_fakes.py  embedding_fakes.py  test_admin.py  test_ai_client.py  test_ai_schemas.py  test_auth.py  test_bounty.py  test_database.py  test_duplicate_client.py  test_duplicate_pipeline.py  test_duplicate_prompts.py  test_duplicate_recall.py  test_duplicate_schemas.py  test_embedding_client.py  test_embedding_pipeline.py  test_evaluation.py  test_health.py  test_ideas.py  test_probe_duplicate_provider.py  test_probe_embedding_provider.py
(+69 files in other folders)
