[project]
name = "idea-bounty-api"
version = "0.1.0"
description = "Backend API for Idea Bounty"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "pwdlib[argon2]>=0.3,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx2",
    "mypy>=1.14,<2",
    "pytest>=8.3,<10",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_bounty"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
